--- a/netbox/project-static/bootstrap-3.4.1-dist/css/bootstrap.css
+++ b/netbox/project-static/bootstrap-3.4.1-dist/css/bootstrap.css
@@ -4569,7 +4569,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #337ab7a8;
+  background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
